# deepseek-cursor-proxy

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  config.example.yaml  config.yaml  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.cursor/rules/: general.mdc
.github/workflows/: ci.yml
assets/scripts/: compare_logo.py  optimize_svg.py
docs/: audit_report.md  audit_report_claude.md  audit_report_codex.md  audit_report_codex_traced.md  fork-analysis.md  thinking-mode-tool-call-flow.md  thinking-tools.md
scripts/: audit_deepseek_protocol.py  audit_protocol_compliance.py
src/deepseek_cursor_proxy/: __init__.py  __main__.py  config.py  reasoning_store.py  server.py  streaming.py  trace.py  transform.py  tunnel.py
tests/: test_audit_protocol_compliance.py  test_config.py  test_live.py  test_live_deepseek_cursor_proxy.py  test_protocol.py  test_proxy_end_to_end.py  test_reasoning_store.py  test_server.py  test_streaming.py  test_trace.py  test_transform.py  test_tunnel.py
